fix:chat info responsive and dark mode

--- a/frontend/src/assets/scss/components/_chatInfo.scss
+++ b/frontend/src/assets/scss/components/_chatInfo.scss
@@ -24,11 +24,11 @@
     .content {
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 12px;
       overflow-y: auto;
       scrollbar-width: thin;
       scrollbar-color: var(--scrollbar-color) transparent;
-      background: var(--sidebar-bg);
+      background: var(--drawer-background-deep);
       height: 100%;
       .profileContainer {
         padding: 30px 0;
@@ -60,7 +60,7 @@
           margin-top: 10px;
           gap: 5px;
 
-          h3 {
+          h2 {
             color: var(-secondary-dark);
             font-weight: 400;
           }
@@ -89,6 +89,94 @@
 
       .optionContainer {
         background: var(--bg-color);
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .chatInfo {
+    .row {
+      .heading {
+        gap: 28px;
+      }
+
+      .content {
+        .profileContainer {
+          padding: 30px 0;
+          .profileImg {
+            height: 200px;
+            width: 200px;
+          }
+
+          .details {
+            margin-top: 20px;
+          }
+        }
+
+        .aboutContainer {
+          p {
+            font-size: 16px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 375px) {
+  .chatInfo {
+    .row {
+      .heading {
+        gap: 15px;
+        height: 60px;
+        .closeBtn {
+          .icon {
+            width: 20px;
+            height: 20px;
+          }
+        }
+
+        p {
+          font-size: 17px;
+          line-height: 55px;
+        }
+      }
+
+      .content {
+        gap: 8px;
+        .profileContainer {
+          padding: 20px 0;
+          .profileImg {
+            height: 140px;
+            width: 140px;
+          }
+
+          .details {
+            margin-top: 12px;
+            gap: 5px;
+
+            h2 {
+              font-weight: 400;
+              font-size: 22px;
+            }
+
+            p {
+              font-size: 14px;
+            }
+          }
+        }
+
+        .aboutContainer {
+          padding: 15px 0;
+          h3 {
+            font-size: 14px;
+            margin-bottom: 8px;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
       }
     }
   }
