--- a/frontend/src/assets/scss/components/_chatWindow.scss
+++ b/frontend/src/assets/scss/components/_chatWindow.scss
@@ -1,6 +1,6 @@
 .chatWindow {
   display: flex;
-  height: var(--app-height); 
+  height: var(--app-height);
   width: 65%;
   overflow: hidden;
   background-repeat: no-repeat;
@@ -10,7 +10,7 @@
     flex-direction: column;
     overflow: hidden;
 
-    // height: var(--app-height); 
+    // height: var(--app-height);
     width: 100%;
     transition: 0.3s ease-in-out;
   }
@@ -77,6 +77,15 @@
     width: 100%;
     .startWindow {
       display: none;
+    }
+  }
+
+  .open {
+    .row {
+      width: 0;
+    }
+    .chatInfoContainer {
+      width: 100%;
     }
   }
 }
